# palette

./: .gitignore  ACTION_GOLDEN_DATASET.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_AUDIT_2026-03-11.json  COMPREHENSIVE_AUDIT_REPORT_2026-03-11.md  CONTRIBUTING.md  FDE_READINESS.md  KIRO_FINDINGS_FOR_CLAUDE_2026-03-16.md  KIRO_SEMANTIC_AUDIT_2026-03-24.md  KNOWLEDGE_INDEX.yaml  KNOWLEDGE_LIBRARY_PROVENANCE.md  LICENSE  MANIFEST.yaml  ONBOARDING_MISTRAL_VIBE.md  PALETTE_QUICK_REFERENCE.md  PIS_FINAL_AUDIT_2026-03-02.md  PIS_PHASE3_COMPLETE.md  QUICKSTART.md  README.md  RELATIONSHIP_GRAPH.yaml  SDK_HARDENING_V2.1_COMPLETE.md  SDK_V2_1_CREATIVE_IMPROVEMENT_AUDIT_2026-03-16.md  __init__.py  decisions.md  install.sh  job-search.skill  litellm_config.yaml  palette  palette-description.txt  portfolio.html  pyproject.toml  setup.sh
.claude-code/: KIRO_VOICE_AUDIT_COMPLETE.md  LETTER_TO_NEXT_CONTEXT.md
.codex/: FAILURE_MODES_AND_COUNTERMEASURES.md  MESSAGE_TO_FUTURE_CODEX.md  README_START_HERE.md  STRESS_TESTS_PROPOSED_BY_KIRO.md  STRESS_TEST_4_RESULTS_2026-02-27.md  STRESS_TEST_EXECUTION_PLAN_2026-02-27.md  TASK_TYPE_DECISION_GUIDE.md  WORKING_STYLE_AND_EDGE.md
.gemini/: MESSAGE_TO_FUTURE_GEMINI_CLI.md  NORTH_STAR_REFLECTION.md
.kiro/: BASETEN_JOB_MATCH_ANALYSIS.md  IF_I_STARTED_FROM_SCRATCH.md  KIRO_READ_THIS_FIRST.md  SESSION_2026-06-11.md  STRESS_TEST_5_KIRO_RUN_2026-02-27.md  STRESS_TEST_COMPARISON_KIRO_VS_CODEX.md  STRESS_TEST_FINAL_COMPARISON.md  SYSTEM_REDESIGN_ANALYSIS.md  TURSO.md  steering.md
.mistral/: MCP_MESSAGE_SENDING.md  MISTRAL_REFLECTION.md
(+2873 files in other folders)
