[project]
name = "palette"
version = "1.0.0"
description = "Palette Intelligence System — agentic AI routing and recommendations"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "anthropic>=0.70",
]

[project.scripts]
pis = "scripts.pis.cli:main"
