[project]
name = "palette"
version = "2.0.0"
description = "Palette Intelligence System — agentic AI routing and recommendations"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
    "anthropic>=0.70",
]

[project.scripts]
pis = "scripts.palette_intelligence_system.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
